[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashtrack"
version = "0.0.1"
description = "A cli tool to track file changes via checksums"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# extra dependencies
[project.optional-dependencies]
dev = [
    "pytest~=7.4.3",
    "pytest-cov~=4.1.0"
]

[tool.setuptools]
packages = ["hashtrack", "hashtrack.cmd", "hashtrack.utils"]

# cli entrypoint
[project.scripts]
hashtrack = "hashtrack.__main__:main"